syntax = "proto3";
package proto;

// Get blocks
message BlocksRequest {
    uint64 BlocksNnum = 1;
}

message BlocksResponse {
    bytes Payload = 1;
}

message BlockHeightRequest {
}

message BlockHeightResponse {
	uint64 BlockHeight = 1;
}

message TxPoolRequest {
}

message TxPoolResponse {
	bytes payload = 1;
}